Fix NavBar for FireFox

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Weboxapps</title>
+  <title>WeBoxApps</title>
   <base href="/">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
@@ -18,5 +18,5 @@
   <script>
     AOS.init();
   </script>
-<script src="runtime-es2015.0811dcefd377500b5b1a.js" type="module"></script><script src="runtime-es5.0811dcefd377500b5b1a.js" nomodule defer></script><script src="polyfills-es5.e94ba732172de6683982.js" nomodule defer></script><script src="polyfills-es2015.442fa3cc45520cc0d518.js" type="module"></script><script src="scripts.10a572a75c4f92068d8a.js" defer></script><script src="main-es2015.73ec3f9f0fb9c446d28f.js" type="module"></script><script src="main-es5.73ec3f9f0fb9c446d28f.js" nomodule defer></script></body>
+<script src="runtime-es2015.0811dcefd377500b5b1a.js" type="module"></script><script src="runtime-es5.0811dcefd377500b5b1a.js" nomodule defer></script><script src="polyfills-es5.e94ba732172de6683982.js" nomodule defer></script><script src="polyfills-es2015.442fa3cc45520cc0d518.js" type="module"></script><script src="scripts.10a572a75c4f92068d8a.js" defer></script><script src="main-es2015.61b75c52fdc71b505e6a.js" type="module"></script><script src="main-es5.61b75c52fdc71b505e6a.js" nomodule defer></script></body>
 </html>
